--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 	--clr-light: #fff;
 	--clr-dark: #303030;
-	--clr-accent: #16e0bd;
+	--clr-accent: #06d6a0;
 
 	--fs-h1: 3rem;
 	--fs-h2: 2.25rem;
